post-R10 polish: TextMate fix + util rename + openWrite groundwork
Bundle 5 nhóm thay đổi vì file-level overlap (LocalSource/TrashSource
chia sẻ giữa lint Paths.get fix + openWrite extension):

1. **TextMate syntax highlight** (Codex session) — fix 3 backend bugs:
   - languages.json: wrap thành {"languages":[...]} theo contract
     GrammarRegistry.loadGrammars (trước đây là JSON array trần)
   - Grammar paths: relative -> full asset path để AssetsFileResolver
     resolve được từ assets-root
   - darcula.json: inline tokenColors thay cho "include":"./dark_plus.json"
     (file include không bundle, cause fallback theme)

2. **util package rename** (cosmetic, Codex session) — support/ -> util/
   để tên package gợi đúng vai trò (utility helpers, không phải support).
   17 file moved, 50+ consumer imports updated.

3. **Lint Paths.get** — fix 8 lint NewApi errors khi gradlew check chạy
   lintDebug: java.nio.file.Path#of yêu cầu API 34, dùng Paths.get
   (Java 7) thay vì Path.of (Java 11/Android 13+) cho min SDK 30.
   Files: LocalSource, TextEditorActivity, TrashOps, TrashSource.

4. **NodeSource.openWrite groundwork** (C-1a foundation) — thêm
   symmetric counterpart của read():
   - NodeSource interface +openWrite(VirtualNode) -> OutputStream
   - LocalSource impl: Files.newOutputStream(WRITE|CREATE|TRUNCATE_EXISTING)
   - Archive/Trash/Bookmark/Parent throw read-only (consistent với existing
     read-only write API pattern from R-4)
   - VirtualNode.openWrite() convenience wrapper

5. **Automated test scaffolding** (Codex session):
   - JVM SyntaxAssetContractTest validates languages.json shape + grammar/
     theme paths exist
   - androidTest/ scaffold: SyntaxSetupInstrumentedTest +
     TextEditorActivityInstrumentedTest
   - TEST_PLAN.md documents JVM vs androidTest layers
   - androidx test deps trong libs.versions.toml + build.gradle.kts

BUILD SUCCESSFUL + gradlew check GREEN + 27 JVM tests pass
(3 FilePath + 2 PosixPermission + 19 LanguageResolver + 3 S